@startuml
class Utilisateur
class EspaceTravail
class Adhesion
class Document
class Chunk
class Conversation
class Message
class Trace

Utilisateur "1" -- "0..*" Adhesion
EspaceTravail "1" -- "0..*" Adhesion
EspaceTravail "1" -- "0..*" Document
Document "1" *-- "0..*" Chunk
Utilisateur "1" -- "0..*" Conversation
Conversation "1" *-- "1..*" Message
Message "1" -- "0..1" Trace
@enduml
